--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   <section class="mb-3">
                     <h5>Social network:</h5>
                     <h6 class="company-name mb-2">
-                      <a class="project" target="_blank" href="https://andriypro100.github.io/SocialNetwork/">Social network</a>
+<!--                      <a class="project" target="_blank" href="https://andriypro100.github.io/SocialNetwork/">Social network</a>-->
                       <a class="project px-2" target="_blank" href="https://github.com/andriyPro100/SocialNetwork">GitHub</a>
                       <i>[React.js, Redux, Bootstrap]</i>
                     </h6>
