--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <article>
                   <header>
                     <h1 class="text-center cv-header mt-5 mb-4">Andrii <span class="color-grey">Protsenko</span></h1>
-                    <h2 class="job-title text-center lines color-grey mb-4">React JS Developer</h2>
+                    <h2 class="job-title text-center lines color-grey mb-4">Future React JS Developer</h2>
                   </header>
                   <h3 class="mb-3 profile color-grey">Profile</h3>
                   <p>Hello, I'm a final year student of KPI from Kyiv. Looking forward to an opportunity to become
